commit etl notebook changes via VS Code since notebooks looked to be untracked.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 data/
+.databricks
+typings/__builtins__.pyi
+.vscode/settings.json
+.virtual_documents/IMBD_notebook.ipynb
+.ipynb_checkpoints/IMBD_notebook-checkpoint.ipynb
+databricks.yml
+.jupyter_ystore.db
